working on setup and linking all sheets

--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- this is the css style sheet -->
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Document</title>
 </head>
 
-<header>
-  <div>
-    <h1 class="headerOne">Header</h1>
-  </div>
-</header>
+  <!-- main header -->
+  <header>
+    <div>
+      <h1 class="headerOne" id="name">Fred McWilliams</h1>
+    </div>
+  </header>
 
-<body>
+  <!-- main body -->
+  <body>
+    <div class="bodyMain">
+      <div id="intro">Words and things</div>
+    </div>
+  </body>
 
-</body>
-
-<footer></footer>
+  <!-- main footer -->
+  <footer></footer>
 
 <script src="./assets/js/scripts.js"></script>
 </html>
