working on header

--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
 
   <!-- main header -->
   <header>
-    <div>
+    <div class="headerContainer">
       <h1 class="headerOne" id="name">Fred McWilliams</h1>
+      <ul class="headerList">
+        <li>Home</li>
+        <li>About Me</li>
+        <li>LinkedIn</li>
+        <li>Contact</li>
+      </ul>
     </div>
   </header>
 
   <!-- main body -->
   <body>
     <div class="bodyMain">
-      <div id="intro">Words and things</div>
+      <div id="intro">This will be the placeholder for the core
+        of the site
+      </div>
     </div>
   </body>
 
