--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   </body>
 
   <!-- main footer -->
-  <footer></footer>
+  <footer>
+    <div class="footerMain">placeholder information</div>
+  </footer>
 
 <script src="./assets/js/scripts.js"></script>
 </html>
