--- a/index.html
+++ b/index.html
@@ -29,18 +29,19 @@
         My extensive background in customer service has enabled me to excel in providing exceptional support and forging strong client relationships. This experience, notably including my role at Tesla, has equipped me with the resilience required to thrive in high-pressure environments.
         Blending this customer service expertise with my technical degree, I offer a unique mix of analytical skills and technical knowledge. I excel in managing incidents on the production line and swiftly resolving software issues via APIs. My capabilities include a deep understanding of client needs, conducting thorough Root Cause Analyses (RCAs), and crafting customized solutions that address their specific challenges. My approach combines investigative prowess with technical proficiency to achieve outstanding results.
       </div>
+      <div>
+        Below you can find links to my projects and acheievement
+      </div>
     </div>
   </body>
 
   <!-- main footer -->
   <footer>
     <div class="footerMain">
-      <div>Contact Me</div>
-      <div>
-        <ul>
-          <li>Email</li>
-        </ul>
-      </div>
+      <p>Contact Me</p>
+      <ul class="listFooter">
+        <li>Email</li>
+      </ul>
     </div>
   </footer>
 
