adding in body placeholders for saocial media links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         Blending this customer service expertise with my technical degree, I offer a unique mix of analytical skills and technical knowledge. I excel in managing incidents on the production line and swiftly resolving software issues via APIs. My capabilities include a deep understanding of client needs, conducting thorough Root Cause Analyses (RCAs), and crafting customized solutions that address their specific challenges. My approach combines investigative prowess with technical proficiency to achieve outstanding results.
       </div>
       <div>
-        Below you can find links to my projects and acheievement
+        Below you can find links to my social media
+      </div>
+      <div class="links">
+        <div id="gitHub">Github</div>
+        <div id="linkedIn">LinkedIn</div>
+        <div id="instagram">Instagram</div>
       </div>
     </div>
   </body>
