working on links to header list items

--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
     <div class="headerContainer">
       <h1 class="headerOne" id="name">Fred McWilliams</h1>
       <ul class="headerList">
-        <li>Home</li>
-        <li>About Me</li>
-        <li>LinkedIn</li>
-        <li>Contact</li>
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="intro">About Me</a>
+        </li>
+        <li>
+          <a href="social-media">Social Media</a>
+        </li>
+        <li>
+          <a href="contact">Contact</a>
+        </li>
       </ul>
     </div>
   </header>
@@ -32,7 +40,7 @@
       <div>
         Below you can find links to my social media
       </div>
-      <div class="links">
+      <div class="links" id="social-media">
         <div id="gitHub">Github</div>
         <div id="linkedIn">LinkedIn</div>
         <div id="instagram">Instagram</div>
@@ -42,7 +50,7 @@
 
   <!-- main footer -->
   <footer>
-    <div class="footerMain">
+    <div class="footerMain" id="contact">
       <p>Contact Me</p>
       <ul class="listFooter">
         <li>Email</li>
