adding in body sections and resolved href links to sections

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <h1 class="headerOne" id="name">Fred McWilliams</h1>
       <ul class="headerList">
         <li>
-          <a href="">Home</a>
+          <a href="#headerContainer">Home</a>
         </li>
         <li>
-          <a href="intro">About Me</a>
+          <a href="#about-me">About Me</a>
         </li>
         <li>
-          <a href="social-media">Social Media</a>
+          <a href="#social-media">Social Media</a>
         </li>
         <li>
-          <a href="contact">Contact</a>
+          <a href="#contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -32,10 +32,24 @@
   <!-- main body -->
   <body>
     <div class="bodyMain">
-      <div id="intro">
+      <div id="about-me">
         As an Application Support Technician, I specialize in quickly mastering new applications to enhance production efficiency and implement software upgrades effectively. 
         My extensive background in customer service has enabled me to excel in providing exceptional support and forging strong client relationships. This experience, notably including my role at Tesla, has equipped me with the resilience required to thrive in high-pressure environments.
         Blending this customer service expertise with my technical degree, I offer a unique mix of analytical skills and technical knowledge. I excel in managing incidents on the production line and swiftly resolving software issues via APIs. My capabilities include a deep understanding of client needs, conducting thorough Root Cause Analyses (RCAs), and crafting customized solutions that address their specific challenges. My approach combines investigative prowess with technical proficiency to achieve outstanding results.
+      </div>
+      <div id="skills">
+        <ul>
+          <li>MySQL</li>
+          <li>SPLUNK</li>
+          <li>Jira Service Desk</li>
+          <li>Microsoft Suites</li>
+          <li>Incident Management</li>
+          <li>Problem Solving</li>
+          <li>SOP Development</li>
+          <li>Real Time Data Analasys</li>
+          <li>Postman API</li>
+          <li>Customer Support</li>
+        </ul>
       </div>
       <div>
         Below you can find links to my social media
