adding in skills trees and setting up seperation of lists

--- a/index.html
+++ b/index.html
@@ -38,7 +38,19 @@
         Blending this customer service expertise with my technical degree, I offer a unique mix of analytical skills and technical knowledge. I excel in managing incidents on the production line and swiftly resolving software issues via APIs. My capabilities include a deep understanding of client needs, conducting thorough Root Cause Analyses (RCAs), and crafting customized solutions that address their specific challenges. My approach combines investigative prowess with technical proficiency to achieve outstanding results.
       </div>
       <div id="skills">
-        <ul>
+        <ul id="skillsLeft">
+          <li>MySQL</li>
+          <li>SPLUNK</li>
+          <li>Jira Service Desk</li>
+          <li>Microsoft Suites</li>
+          <li>Incident Management</li>
+          <li>Problem Solving</li>
+          <li>SOP Development</li>
+          <li>Real Time Data Analasys</li>
+          <li>Postman API</li>
+          <li>Customer Support</li>
+        </ul>
+        <ul id="skillsRight">
           <li>MySQL</li>
           <li>SPLUNK</li>
           <li>Jira Service Desk</li>
