confirmed link to javascript file and also setup onClick functions for the social media links

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         Below you can find links to my social media
       </div>
       <div class="links" id="social-media">
-        <div id="gitHub">Github</div>
-        <div id="linkedIn">LinkedIn</div>
-        <div id="instagram">Instagram</div>
+        <button id="gitHub">Github</button>
+        <button id="linkedIn">LinkedIn</button>
+        <button id="instagram">Instagram</button>
       </div>
     </div>
   </body>
