working on function to show contact info when clicked, also testing debugging

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
   <!-- main footer -->
   <footer>
-    <div class="footerMain" id="contact">
-      <p>Contact Me</p>
+    <div class="footerMain">
+      <p id="contactMe">Contact Me</p>
       <ul class="listFooter">
         <li>Email</li>
       </ul>
